UI bugs like footer overlapping with content on page.

--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,5 +1,6 @@
 body{
 	padding-top: 70px;
+	padding-bottom: 70px;
 }
 #main {
 	margin: 0px auto;
@@ -25,4 +26,14 @@ body{
 }
 .brandreflex {
 	height: 150%;
+}
+.footerfixed{
+position: fixed;
+bottom: 0;
+width: 100%;
+height: 60px;
+background-color: #f5f5f5;
+}
+.containerpad{
+padding:0 30 0 30;
 }
